# bio_analyzer_APIRest

./: .env.example  .firebaserc  .flake8  .gitignore  ANALISIS_BEST_BLOG.md  ANALISIS_REPOSITORIO_FLASK.md  CONTRIBUTING.md  DEPLOYMENT_SUCCESS.md  DIAGNOSTICO_PASSWORD_RESET.md  DJANGO_ARCHITECTURE_DESIGN.md  GUIA_IMPLEMENTACION_S3.md  MARKDOWN_GUIDE.md  Makefile  NEXT_STEPS.txt  NOTIFICATIONS_SETUP.md  PHASE_0_PLAN.md  Procfile  README.md  REGISTRO_DEBUG.md  RESUMEN_FINAL.md  RESUMEN_IMPLEMENTACION_COMPLETA.md  SOLUCION_COMPLETA.md  agents.md  azure_architecture.md  bot_polling.py  check_admin.py  check_email_config.py  check_production_db.py  check_s3_photos.py  connect_railway_db.py  create_blog_tables.py  create_media_files_table.sql  create_tables.sql  db.sqlite3  firebase.json  fix_contact_button.py  fix_email_config.py  fix_media_files_table.py  fix_production_roles.py  force_create_tables.py  (+34 more)
.github/: AGENTS.md  BRIEFING_LANDING.md  SSD.md
app/: __init__.py  config.py  config.py.backup
best_blog/: BLOG_ROADMAP.md  DASHBOARD_PREMIUM_GUIDE.md  GUIA_IMPLEMENTACION.md  QUICK_START.md  README.md  RESUMEN_EJECUTIVO.md  TODO.md  admin_routes_premium.py  app__init___fixed.py  blog_dashboard_flowbite.html  fix_media_files_table.py  verify_blog_system.py
config/: urls.py
database/: date_input.py
django_backend/: .env.example  .gitignore  README.md  requirements.txt
docs/: AWS_S3_BUCKET_POLICY.md  AWS_S3_CLOUDFRONT_SETUP.md  COMO_SUBIR_PLANES_MANUALES.md  ESTRUCTURA_JSON_PLANES.md  MIGRATION_GO_NO_GO.md  NUEVAS_SECCIONES.md  PHASE_1_PLAN.md  RAILWAY_MIGRATIONS.md  RESUMEN_DASHBOARD_ADMIN.md  ROADMAP.md  ROADMAP_FASES_3_4.md  S3_BUCKET_POLICY.md  SSD_AGENTS_GUARDRAILS.md
files/: GUIA_IMPLEMENTACION.md  IMAGENES_SEO_SPECS.md  INTEGRACION_RAPIDA.md  QUICKSTART.md  README.md  RESUMEN_EJECUTIVO.md  integrate_seo.py  landing_views_seo.py  seo_head_fragment.html  sitemap.xml  validate_seo.py
functions/: main_old.py  requirements.txt
instance/: coachbodyfit360_dev.db  empty.db  venv
migrations/: create_blog_posts.py  create_media_files.py
scripts/: check_nutrition_plans.py  check_prod_migrations.py  init_roles.py  run_migrations_railway.sh  test_assistant_tools.py  test_openai_prod.py  test_streaming_debug.py  test_streaming_handler.py  test_streaming_tools.py  update_assistant.py  upgrade_prod_migrations.py  upgrade_prod_now.py  verify_assistant_config.py  verify_s3_ready.py  verify_tables.py
templates/: base.html  formulario.html  resultados.html  resultados_pdf.html
(+251 files in other folders)
