# Build, define las herremientas necesarias para gestionar,
# usamos setuptools para la construccion y el empaquetado del proyecto.

[build-system]
requires = ["setuptools~=72.1.0", "wheel~=0.44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "body_analyzer"
version = "0.1.0"
dynamic = ["readme"]
authors = [
    { name = "2024 Pablo Techera", email = "ptecherasosa@icloud.com" },
]
description = "Development of a REST API for body composition analysis."
requires-python = ">=3.11"
keywords = ["body composition", "health", "calculator", "REST API", "Python", "body analysis"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License"
]

dependencies = [
    "Django~=5.0",
    "djangorestframework~=3.15",
    "psycopg2-binary~=2.9",
    "python-dotenv~=1.0",
    "openai>=2.2",
    "pydantic~=2.7",
    "pytest-django~=4.8"
]

# tool define de donde se va a obtener la descripción del proyecto en este caso del fichero README.md
[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

# project.optional son dependencias opcionales y utilidades adicionales.

[project.optional-dependencies]
tests = [
    "time-machine==2.15.0",
    "coverage==7.6.1"
]
extended = [
    "time-machine==2.14.1"
]

# tool.setuptools define donde están los archivos de código fuente y necesario para que setuptools sepa qué paquetes debe incluir.

[tool.setuptools.packages.find]
where = ["."]
include = ["app"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
markers = [
    "integration: integration tests that may call external services",
    "django_db: marks tests that require database access",
]

# Black - Code formatter
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
  | instance
)/
'''

# isort - Import sorter
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/instance/*"]

# Flake8 configuration (in .flake8 file)
